--- a/grub-core/Makefile.core.def
+++ b/grub-core/Makefile.core.def
@@ -1038,6 +1038,11 @@ module = {
 };
 
 module = {
+  name = scan;
+  common = commands/scan.c;
+};
+
+module = {
   name = spkmodem;
   x86 = term/spkmodem.c;
   enable = x86;
