Add separate scan command.
Scanning ofw devices is lengthy so try to do without.

Signed-off-by: Michal Suchanek <msuchanek@suse.de>

--- a/grub-core/Makefile.core.def
+++ b/grub-core/Makefile.core.def
@@ -956,6 +956,11 @@ module = {
 };
 
 module = {
+  name = scan;
+  common = commands/scan.c;
+};
+
+module = {
   name = spkmodem;
   x86 = term/spkmodem.c;
   enable = x86;
