grub-mkconfig_lib.in: Use scan in searching for root device.
Signed-off-by: Michal Suchanek <msuchanek@suse.de>

--- a/util/grub-mkconfig_lib.in
+++ b/util/grub-mkconfig_lib.in
@@ -159,9 +159,15 @@ prepare_grub_to_access_device ()
   if fs_uuid="`"${grub_probe}" --device $@ --target=fs_uuid 2> /dev/null`" ; then
     hints="`"${grub_probe}" --device $@ --target=hints_string 2> /dev/null`" || hints=
     echo "if [ x\$feature_platform_search_hint = xy ]; then"
-    echo "  search --no-floppy --fs-uuid --set=root ${hints} ${fs_uuid}"
+    echo "  if ! search --no-floppy --fs-uuid --set=root ${hints} ${fs_uuid} ; then"
+    echo "       scan"
+    echo "       search --no-floppy --fs-uuid --set=root ${hints} ${fs_uuid}"
+    echo "  fi"
     echo "else"
-    echo "  search --no-floppy --fs-uuid --set=root ${fs_uuid}"
+    echo "  if ! search --no-floppy --fs-uuid --set=root ${fs_uuid} ; then"
+    echo "       scan"
+    echo "       search --no-floppy --fs-uuid --set=root ${fs_uuid}"
+    echo "  fi"
     echo "fi"
   fi
   IFS="$old_ifs"
